# wiki-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  要件定義.md
.agents/: core.md
.agents/skills/commit/: SKILL.md
.agents/skills/md-wiki/: SKILL.md
.agents/skills/release/: SKILL.md
.claude/skills/: md-wiki
.claude/skills/commit/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  requirements_change.md
.github/workflows/: release.yml  verify.yml
docs/: OSS公開作業計画.md  RELEASING.md  data-structures.md  minimal-pipeline.md  retrieval-compiler-progress.md  why.md
docs/quality/: README.md
docs/quality/history/: 2f3e9a8a4f73-dirty.json  (+3 more)
docs/releases/: v0.1.0.md  v0.1.1.md
docs/要件定義/: 01-概要.md  02-スコープ.md  03-想定利用者.md  04-用語定義.md  05-ユースケース.md  06-前提.md  07-入力.md  08-機能要件.md  09-非機能要件.md  10-出力要件.md  11-制約.md  12-エラー処理.md  13-受け入れ基準.md  14-将来拡張.md  15-確定済み仕様.md  16-設計判断.md  17-継続検証と品質スコア.md  18-巨大Markdown対応完了条件.md  19-巨大Markdown対応設計と機械検証.md  20-ツール使用型エージェント向け探索仕様と設計.md  21-agentic-search実装作業計画.md  index.md
examples/: agentic_search_gate.rs  large_md_gate.rs  quality_score.rs
scripts/: record-quality-score.sh  verify.sh
src/: agentic_output.rs  agentic_search_gate.rs  analyzer.rs  build.rs  chunker.rs  fragment.rs  generator.rs  input_classifier.rs  large_markdown.rs  large_md_gate.rs  lib.rs  llm.rs  main.rs  metadata_renderer.rs  model.rs  output_plan.rs  page_registry.rs  regular_page_plan.rs  relations.rs  scanner.rs  schema.rs  types.rs
src/extract/: entrypoint.rs  mod.rs  tech_stack.rs  test_layout.rs
src/link/: mod.rs  resolver.rs  slug.rs  wikilink.rs
src/notes/: frontmatter.rs  headings.rs  ingest.rs  mod.rs
src/render/: development.rs  fragment.rs  headings.rs  index.rs  links.rs  mod.rs  node.rs  overview.rs  paths.rs  site_index.rs  tags.rs  text.rs  unresolved.rs
src/scan/: mod.rs
tests/: acceptance.rs  docs.rs  e2e.rs  scan.rs  schema_context.rs
(+7 files in other folders)
