[package]
name = "md-wiki-cli"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Generate an offline Markdown wiki from local Markdown notes."
license = "MIT"
repository = "https://github.com/ts020/wiki-agent"
homepage = "https://github.com/ts020/wiki-agent"
documentation = "https://docs.rs/md-wiki-cli"
readme = "README.md"
keywords = ["markdown", "wiki", "cli", "notes", "offline"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    ".github/**",
    ".gitignore",
    ".agents/**",
    ".claude/**",
    ".context/**",
    "AGENTS.md",
    "CLAUDE.md",
    "Cargo.toml.orig",
    "docs/OSS公開作業計画.md",
    "docs/quality/history/**",
]

[lib]
name = "md_wiki"
path = "src/lib.rs"

[[bin]]
name = "md-wiki"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
